--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@
 # Log file
 *.log
 
+#temp file
+*.cache
+*.diff
+*.patch
+*.tmp
+
 # BlueJ files
 *.ctxt
 
@@ -11,7 +17,7 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
+
 *.war
 *.nar
 *.ear
@@ -21,3 +27,30 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#eclipse ignore
+.settings/
+.project
+.classpatch
+
+#idea
+.idea/
+/idea/
+*.ipr
+*.iml
+*.iws
+
+#kdiff3 ignore
+*.orig
+
+#maven ignore
+target/
+
+#system ignore
+.DS_Store
+Thumbs.db
+
+
+
+
+
